Added basic docs scaffolding

--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
-    "lerna": "^3.18.4"
+    "@vuepress/plugin-back-to-top": "^1.2.0",
+    "lerna": "^3.18.4",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^7.0.0",
+    "vuepress": "^1.2.0"
   }
 }
