Changed dependencies mechanism to use `dev` instead of `peer` due to a lerna autoupdate

--- a/packages/mq/package.json
+++ b/packages/mq/package.json
@@ -28,7 +28,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "peerDependencies": {
+  "devDependencies": {
     "@dermis/base": "0.2.0"
   }
 }
