--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -28,7 +28,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "peerDependencies": {
+  "devDependencies": {
     "@dermis/base": "0.2.0",
     "@dermis/mq": "0.2.0",
     "@dermis/rut": "0.2.0"
