--- a/packages/rut/package.json
+++ b/packages/rut/package.json
@@ -28,7 +28,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "peerDependencies": {
+  "devDependencies": {
     "@dermis/base": "0.2.0"
   }
 }
