--- a/packages/dermis/package.json
+++ b/packages/dermis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dermis/dermis",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "main": "index.sass",
   "files": [
     "index.sass"
@@ -28,9 +28,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@dermis/base": "^0.3.0",
-    "@dermis/grid": "^0.3.1",
-    "@dermis/mq": "^0.3.1",
-    "@dermis/rut": "^0.3.1"
+    "@dermis/base": "0.3.2",
+    "@dermis/grid": "0.3.2",
+    "@dermis/mq": "0.3.2",
+    "@dermis/rut": "0.3.2"
   }
 }
