--- a/packages/type/package.json
+++ b/packages/type/package.json
@@ -1,4 +1,35 @@
 {
-  "name": "@dermis/rut",
-  "version": "0.1.0"
+  "name": "@dermis/type",
+  "version": "0.3.4",
+  "main": "index.sass",
+  "files": [
+    "src",
+    "index.sass"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/preusx/dermis.git"
+  },
+  "keywords": [
+    "sass",
+    "dermis",
+    "design",
+    "utility",
+    "style",
+    "css",
+    "media-query"
+  ],
+  "author": "Alex Tkachenko",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/preusx/dermis/issues"
+  },
+  "homepage": "https://preusx.github.io/dermis/",
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
+    "@dermis/base": "0.3.4",
+    "@dermis/rut": "0.3.4"
+  }
 }
