--- a/packages/mq/package.json
+++ b/packages/mq/package.json
@@ -2,6 +2,7 @@
   "name": "@dermis/mq",
   "version": "0.3.5",
   "main": "index.sass",
+  "sass": "index.sass",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/preusx/dermis.git"
