--- a/packages/dermis/package.json
+++ b/packages/dermis/package.json
@@ -30,6 +30,7 @@
     "@dermis/grid": "0.3.5",
     "@dermis/mq": "0.3.5",
     "@dermis/rut": "0.3.5",
+    "@dermis/tone": "0.3.5",
     "@dermis/type": "0.3.5"
   }
 }
