--- a/packages/caption/package.json
+++ b/packages/caption/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dermis/dermis",
+  "name": "@dermis/caption",
   "version": "0.5.0",
   "main": "index.sass",
   "sass": "index.sass",
@@ -25,16 +25,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
+  "devDependencies": {
     "@dermis/base": "0.5.0",
-    "@dermis/mq": "0.5.0",
-    "@dermis/rut": "0.5.0",
-    "@dermis/tone": "0.5.0",
-    "@dermis/type": "0.5.0",
-    "@dermis/grid": "0.5.0",
-    "@dermis/aspect-ratio": "0.5.0",
-    "@dermis/panel": "0.5.0",
-    "@dermis/section": "0.5.0",
-    "@dermis/caption": "0.5.0"
+    "@dermis/mq": "0.5.0"
   }
 }
