--- a/packages/dermis/package.json
+++ b/packages/dermis/package.json
@@ -35,6 +35,7 @@
     "@dermis/aspect-ratio": "0.5.0",
     "@dermis/panel": "0.5.0",
     "@dermis/section": "0.5.0",
-    "@dermis/caption": "0.5.0"
+    "@dermis/caption": "0.5.0",
+    "@dermis/link": "0.5.0"
   }
 }
