--- a/packages/dermis/package.json
+++ b/packages/dermis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dermis/dermis",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "main": "index.sass",
   "sass": "index.sass",
   "repository": {
@@ -26,16 +26,16 @@
     "access": "public"
   },
   "dependencies": {
-    "@dermis/base": "0.5.0",
-    "@dermis/mq": "0.5.0",
-    "@dermis/rut": "0.5.0",
-    "@dermis/tone": "0.5.0",
-    "@dermis/type": "0.5.0",
-    "@dermis/grid": "0.5.0",
-    "@dermis/aspect-ratio": "0.5.0",
-    "@dermis/panel": "0.5.0",
-    "@dermis/section": "0.5.0",
-    "@dermis/caption": "0.5.0",
-    "@dermis/link": "0.5.0"
+    "@dermis/aspect-ratio": "0.6.0",
+    "@dermis/base": "0.6.0",
+    "@dermis/caption": "0.6.0",
+    "@dermis/grid": "0.6.0",
+    "@dermis/link": "0.6.0",
+    "@dermis/mq": "0.6.0",
+    "@dermis/panel": "0.6.0",
+    "@dermis/rut": "0.6.0",
+    "@dermis/section": "0.6.0",
+    "@dermis/tone": "0.6.0",
+    "@dermis/type": "0.6.0"
   }
 }
