--- a/packages/dermis/package.json
+++ b/packages/dermis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dermis/dermis",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "main": "index.sass",
   "sass": "index.sass",
   "repository": {
@@ -26,16 +26,16 @@
     "access": "public"
   },
   "dependencies": {
-    "@dermis/aspect-ratio": "0.7.0",
+    "@dermis/aspect-ratio": "^0.7.1",
     "@dermis/base": "0.7.0",
-    "@dermis/caption": "0.7.0",
-    "@dermis/grid": "0.7.0",
+    "@dermis/caption": "^0.7.1",
+    "@dermis/grid": "^0.7.1",
     "@dermis/link": "0.7.0",
-    "@dermis/mq": "0.7.0",
-    "@dermis/panel": "0.7.0",
+    "@dermis/mq": "^0.7.1",
+    "@dermis/panel": "^0.7.1",
     "@dermis/rut": "0.7.0",
-    "@dermis/section": "0.7.0",
-    "@dermis/table": "0.7.0",
+    "@dermis/section": "^0.7.1",
+    "@dermis/table": "^0.7.1",
     "@dermis/tone": "0.7.0",
     "@dermis/type": "0.7.0"
   }
