--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dermis/grid",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "main": "index.sass",
   "sass": "index.sass",
   "repository": {
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@dermis/base": "0.7.0",
-    "@dermis/mq": "0.7.0",
+    "@dermis/mq": "^0.7.1",
     "@dermis/rut": "0.7.0"
   }
 }
