--- a/packages/aspect-ratio/package.json
+++ b/packages/aspect-ratio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dermis/aspect-ratio",
-  "version": "0.7.1",
+  "version": "0.7.3",
   "main": "index.sass",
   "sass": "index.sass",
   "repository": {
@@ -26,7 +26,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@dermis/base": "0.7.0",
-    "@dermis/mq": "^0.7.1"
+    "@dermis/base": "^0.7.3",
+    "@dermis/mq": "^0.7.3"
   }
 }
