--- a/packages/dermis/package.json
+++ b/packages/dermis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dermis/dermis",
-  "version": "0.7.2",
+  "version": "0.7.3",
   "main": "index.sass",
   "sass": "index.sass",
   "repository": {
@@ -26,17 +26,17 @@
     "access": "public"
   },
   "dependencies": {
-    "@dermis/aspect-ratio": "^0.7.1",
-    "@dermis/base": "0.7.0",
-    "@dermis/caption": "^0.7.1",
-    "@dermis/grid": "^0.7.1",
-    "@dermis/link": "0.7.0",
-    "@dermis/mq": "^0.7.1",
-    "@dermis/panel": "^0.7.2",
-    "@dermis/rut": "0.7.0",
-    "@dermis/section": "^0.7.2",
-    "@dermis/table": "^0.7.1",
-    "@dermis/tone": "0.7.0",
-    "@dermis/type": "0.7.0"
+    "@dermis/aspect-ratio": "^0.7.3",
+    "@dermis/base": "^0.7.3",
+    "@dermis/caption": "^0.7.3",
+    "@dermis/grid": "^0.7.3",
+    "@dermis/link": "^0.7.3",
+    "@dermis/mq": "^0.7.3",
+    "@dermis/panel": "^0.7.3",
+    "@dermis/rut": "^0.7.3",
+    "@dermis/section": "^0.7.3",
+    "@dermis/table": "^0.7.3",
+    "@dermis/tone": "^0.7.3",
+    "@dermis/type": "^0.7.3"
   }
 }
