--- a/packages/mq/package.json
+++ b/packages/mq/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dermis/mq",
-  "version": "0.7.1",
+  "version": "0.7.3",
   "main": "index.sass",
   "sass": "index.sass",
   "repository": {
@@ -26,6 +26,6 @@
     "access": "public"
   },
   "devDependencies": {
-    "@dermis/base": "0.7.0"
+    "@dermis/base": "^0.7.3"
   }
 }
