--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.2.0",
+    "@vuepress/plugin-pwa": "^1.2.0",
     "css-mqpacker": "^7.0.0",
     "lerna": "^3.19.0",
     "postcss-loader": "^3.0.0",
