--- a/packages/inliner/package.json
+++ b/packages/inliner/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dermis/inliner",
-  "version": "0.7.4",
+  "version": "0.8.0",
   "main": "index.sass",
   "sass": "index.sass",
   "repository": {
@@ -26,8 +26,8 @@
     "access": "public"
   },
   "devDependencies": {
-    "@dermis/base": "^0.7.3",
-    "@dermis/type": "^0.7.3",
-    "@dermis/mq": "^0.7.3"
+    "@dermis/base": "^0.8.0",
+    "@dermis/mq": "^0.8.0",
+    "@dermis/type": "^0.8.0"
   }
 }
