Added dependency on avatar package to dermis

--- a/packages/dermis/package.json
+++ b/packages/dermis/package.json
@@ -40,6 +40,7 @@
     "@dermis/section": "^0.20.0",
     "@dermis/table": "^0.20.0",
     "@dermis/tone": "^0.20.0",
+    "@dermis/avatar": "^0.20.0",
     "@dermis/type": "^0.20.0"
   }
 }
