--- a/packages/dermis/package.json
+++ b/packages/dermis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dermis/dermis",
-  "version": "0.20.0",
+  "version": "0.21.0",
   "main": "index.sass",
   "sass": "index.sass",
   "repository": {
@@ -26,22 +26,22 @@
     "access": "public"
   },
   "dependencies": {
-    "@dermis/aspect-ratio": "^0.20.0",
-    "@dermis/base": "^0.20.0",
-    "@dermis/caption": "^0.20.0",
-    "@dermis/controls": "^0.20.0",
-    "@dermis/grid": "^0.20.0",
-    "@dermis/inliner": "^0.20.0",
-    "@dermis/link": "^0.20.0",
-    "@dermis/mq": "^0.20.0",
-    "@dermis/panel": "^0.20.0",
-    "@dermis/qproxy": "^0.20.0",
-    "@dermis/rut": "^0.20.0",
-    "@dermis/section": "^0.20.0",
-    "@dermis/table": "^0.20.0",
-    "@dermis/tone": "^0.20.0",
-    "@dermis/avatar": "^0.20.0",
-    "@dermis/utils": "^0.20.0",
-    "@dermis/type": "^0.20.0"
+    "@dermis/aspect-ratio": "^0.21.0",
+    "@dermis/avatar": "^0.21.0",
+    "@dermis/base": "^0.21.0",
+    "@dermis/caption": "^0.21.0",
+    "@dermis/controls": "^0.21.0",
+    "@dermis/grid": "^0.21.0",
+    "@dermis/inliner": "^0.21.0",
+    "@dermis/link": "^0.21.0",
+    "@dermis/mq": "^0.21.0",
+    "@dermis/panel": "^0.21.0",
+    "@dermis/qproxy": "^0.21.0",
+    "@dermis/rut": "^0.21.0",
+    "@dermis/section": "^0.21.0",
+    "@dermis/table": "^0.21.0",
+    "@dermis/tone": "^0.21.0",
+    "@dermis/type": "^0.21.0",
+    "@dermis/utils": "^0.21.0"
   }
 }
