--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-loader": "^3.0.0",
     "sass": "^1.23.7",
     "sass-loader": "^7.0.0",
+    "sass-migrator": "^1.5.2",
     "vuepress": "^1.2.0",
     "vuepress-plugin-demo-block": "^0.7.2"
   }
